More comments, and migrate to uint8_t where we can. Our custom string type is still using a char* buffer under the hood.

--- a/prgm02/Makefile
+++ b/prgm02/Makefile
@@ -1,4 +1,4 @@
-FLAGS = -Wall -Wextra -g
+FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion
 NAME = peer
 
 main: main.o utilities.o
