Change Makefile to support release and debug builds

--- a/prgm02/Makefile
+++ b/prgm02/Makefile
@@ -1,5 +1,12 @@
-FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion
+RELEASE_FLAGS = -Wall -Wextra -O3
+DEBUG_FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion
 NAME = peer
+
+FLAGS = $(RELEASE_FLAGS)
+all: main
+
+debug: FLAGS = $(DEBUG_FLAGS)
+debug: main
 
 main: main.o utilities.o
 	gcc $(FLAGS) -o $(NAME) main.o utilities.o
