Too much churn to fully explain

--- a/prgm04/Makefile
+++ b/prgm04/Makefile
@@ -1,17 +1,26 @@
 RELEASE_FLAGS = -Wall -Wextra -O3
 DEBUG_FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion
 NAME = registry
-OBJECTS = main.o
+SOURCES = main.cpp connectionfactory.cpp packet.cpp
+OBJECTS = $(SOURCES:.cpp=.o)
 
+CXX = clang++
 CFLAGS = $(RELEASE_FLAGS)
+CXXFLAGS = $(RELEASE_FLAGS)
 
-all: main
+all: $(NAME)
 
 debug: CFLAGS = $(DEBUG_FLAGS)
-debug: main
+debug: CXXFLAGS = $(DEBUG_FLAGS)
+debug: $(NAME)
 
-main: $(OBJECTS)
-	gcc $(CFLAGS) -o $(NAME) $(OBJECTS)
+$(NAME): $(OBJECTS)
+	$(CXX) $(CFLAGS) $(OBJECTS) -o $@
+
+
+%.o: %.c
+	$(CXX) -c $(CXXFLAGS) $< -o $@
+
 
 clean:
 	rm $(NAME) $(OBJECTS)
