Move things to header files

--- a/prgm04/Makefile
+++ b/prgm04/Makefile
@@ -1,7 +1,7 @@
 RELEASE_FLAGS = -Wall -Wextra -O3
 DEBUG_FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion
 NAME = registry
-SOURCES = main.cpp connectionfactory.cpp packet.cpp
+SOURCES = main.cpp
 OBJECTS = $(SOURCES:.cpp=.o)
 
 CXX = clang++
@@ -16,11 +16,6 @@ debug: $(NAME)
 
 $(NAME): $(OBJECTS)
 	$(CXX) $(CFLAGS) $(OBJECTS) -o $@
-
-
-%.o: %.c
-	$(CXX) -c $(CXXFLAGS) $< -o $@
-
 
 clean:
 	rm $(NAME) $(OBJECTS)
