Refactor Makefile and main program structure; introduce PeerPool class for socket management

--- a/prgm04/Makefile
+++ b/prgm04/Makefile
@@ -1,21 +1,20 @@
 RELEASE_FLAGS = -Wall -Wextra -O3
 DEBUG_FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion -fsanitize=address -fsanitize=undefined
 NAME = registry
-SOURCES = main.cpp
-OBJECTS = $(SOURCES:.cpp=.o)
+HEADERS = packet.h peerpool.h
 
-CXX = clang++
+CXX = g++
 CFLAGS = $(RELEASE_FLAGS)
 CXXFLAGS = $(RELEASE_FLAGS)
 
-all: $(NAME)
+all: main
 
 debug: CFLAGS = $(DEBUG_FLAGS)
 debug: CXXFLAGS = $(DEBUG_FLAGS)
-debug: $(NAME)
+debug: main
 
-$(NAME): $(OBJECTS)
-	$(CXX) $(CFLAGS) $(OBJECTS) -o $@
+main: main.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) -o $(NAME) main.cpp
 
 clean:
 	rm $(NAME) $(OBJECTS)
