--- a/prgm04/Makefile
+++ b/prgm04/Makefile
@@ -1,9 +1,8 @@
 RELEASE_FLAGS = -Wall -Wextra -O3
 DEBUG_FLAGS = -Wall -Wextra -g3 -Wconversion -Wdouble-promotion -Wno-sign-conversion -fsanitize=address -fsanitize=undefined
 NAME = registry
-HEADERS = packet.h connpool.h
 
-CXX = clang++
+CXX = g++
 CFLAGS = $(RELEASE_FLAGS)
 CXXFLAGS = $(RELEASE_FLAGS)
 
@@ -13,7 +12,7 @@ debug: CFLAGS = $(DEBUG_FLAGS)
 debug: CXXFLAGS = $(DEBUG_FLAGS)
 debug: main
 
-main: main.cpp $(HEADERS)
+main: main.cpp
 	$(CXX) $(CXXFLAGS) -o $(NAME) main.cpp
 
 clean:
